--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     }
   ],
   "require": {
-    "php": ">=5.5.0"
+    "php": ">=5.5.0",
+    "filp/whoops": ">=1.1.2",
+    "patricklouys/http": ">=1.1.0"
   },
   "autoload": {
     "psr-4": {
